# ChangeLog for media-libs/libtheora
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.55 2006/12/01 03:03:04 flameeyes Exp $

  01 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/libtheora-1.0_alpha4-enable-flags.patch,
  -libtheora-1.0_alpha3.ebuild, -libtheora-1.0_alpha4-r1.ebuild,
  -libtheora-1.0_alpha5.ebuild, -libtheora-1.0_alpha6.ebuild:
  Remove old versions.

  01 Dec 2006; Jeroen Roovers <jer@gentoo.org>
  libtheora-1.0_alpha6-r1.ebuild:
  Stable for HPPA (or xine-lib will not even configure).

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  libtheora-1.0_alpha6-r1.ebuild:
  Stable on Alpha.

  05 Oct 2006; Emanuele Giaquinta <exg@gentoo.org>
  libtheora-1.0_alpha7.ebuild:
  Mangle Makefile.in, not Makefile.am.

  04 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  libtheora-1.0_alpha7.ebuild:
  Remove ~x86-fbsd keyword from latest alpha.

  02 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  libtheora-1.0_alpha7.ebuild:
  Force -j1 in install trying to avoid bug #149832.

  02 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  libtheora-1.0_alpha7.ebuild:
  ekeyword failure.

*libtheora-1.0_alpha7 (02 Oct 2006)

  02 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtheora-1.0_alpha7.ebuild:
  Version bump, hoping it works.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org>
  libtheora-1.0_alpha6-r1.ebuild:
  Marked stable on mips.

  30 Aug 2006; Michael Hanselmann <hansmi@gentoo.org>
  libtheora-1.0_alpha6-r1.ebuild:
  Stable on ppc.

  21 Aug 2006; Daniel Gryniewicz <dang@gentoo.org>
  libtheora-1.0_alpha6-r1.ebuild:
  Marked stable on amd64

  17 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  libtheora-1.0_alpha6-r1.ebuild:
  Stable on sparc

  17 Aug 2006; Markus Rothe <corsair@gentoo.org>
  libtheora-1.0_alpha6-r1.ebuild:
  Stable on ppc64

  15 Aug 2006; Stefan Schweizer <genstef@gentoo.org>