@@ -1,12 +1,12 @@
 DIST libtheora-1.0alpha7.tar.bz2 1673255 RMD160 45a46c35cb1bd6f44a82a286940937e031edb14f SHA1 ee97d30e0818c27666477113c019d53f15449d3d SHA256 f0380bedd14382cf80304e3f209704b460a87981cd11e32194d940151d8880ea
-EBUILD libtheora-1.0_alpha7.ebuild 1380 RMD160 6fcc8c0b0abc182107a419ac2c2e507322a91a6b SHA1 2938bb67cf2f3a4de9610af48e1d75be78c4e311 SHA256 e5bb7fdc7de5d600f5db61c1ba2b4988e7f816b18a89daca508a7e5d9e0438f4
-MD5 f25e307766a6599d6061b986794a40e1 libtheora-1.0_alpha7.ebuild 1380
-RMD160 6fcc8c0b0abc182107a419ac2c2e507322a91a6b libtheora-1.0_alpha7.ebuild 1380
-SHA256 e5bb7fdc7de5d600f5db61c1ba2b4988e7f816b18a89daca508a7e5d9e0438f4 libtheora-1.0_alpha7.ebuild 1380
-MISC ChangeLog 7544 RMD160 795000fe1d7b0e4370ae9b9dd554d06fc2e1c10a SHA1 9482101ea3fdc78ee6e00e1a6498e8d13d438f71 SHA256 ec5b1946703190e39051ed379fc5bfb6bae331233c5e16e227067f4c9bf56107
-MD5 e63c5b4492e7f68aac92b2fc0d1519b6 ChangeLog 7544
-RMD160 795000fe1d7b0e4370ae9b9dd554d06fc2e1c10a ChangeLog 7544
-SHA256 ec5b1946703190e39051ed379fc5bfb6bae331233c5e16e227067f4c9bf56107 ChangeLog 7544
+EBUILD libtheora-1.0_alpha7.ebuild 1490 RMD160 e671a6706df4e57a05e2cb7e131b272bb52efad8 SHA1 b079d357b83e5a4e7f5ab8c1832b7d1255155d98 SHA256 dddce9638aafedcb09b8e4304f44616e280ffbaed1e06eb8e2b770ed0e3915a1
+MD5 d510f2a774bb0311d15285efd3baa2db libtheora-1.0_alpha7.ebuild 1490
+RMD160 e671a6706df4e57a05e2cb7e131b272bb52efad8 libtheora-1.0_alpha7.ebuild 1490
+SHA256 dddce9638aafedcb09b8e4304f44616e280ffbaed1e06eb8e2b770ed0e3915a1 libtheora-1.0_alpha7.ebuild 1490
+MISC ChangeLog 7806 RMD160 9e06e9f3f135dc9c853805185dd7220814b57a9b SHA1 b0da181a927ad891ccf42fec5f1d673f21dd7370 SHA256 d00784e5f709c3c5a5506143485864ba7f66c1e7a7d239baa0fd6535c69e6790
+MD5 6c11fdeb7d3bd7ffecd4aa8b60a5f5bd ChangeLog 7806
+RMD160 9e06e9f3f135dc9c853805185dd7220814b57a9b ChangeLog 7806
+SHA256 d00784e5f709c3c5a5506143485864ba7f66c1e7a7d239baa0fd6535c69e6790 ChangeLog 7806
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
 MD5 9ef4af14dad87b03fde8e43f19e08d26 metadata.xml 225
 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d metadata.xml 225
