@@ -1,6 +1,14 @@
 # ChangeLog for media-libs/libtheora
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.55 2006/12/01 03:03:04 flameeyes Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.57 2007/03/10 20:27:33 beandog Exp $
+
+  10 Mar 2007; Steve Dibb <beandog@gentoo.org>
+  libtheora-1.0_alpha6-r1.ebuild, libtheora-1.0_alpha7.ebuild:
+  Update license, bug 170323
+
+  01 Mar 2007; <genstef@gentoo.org> libtheora-1.0_alpha6-r1.ebuild,
+  libtheora-1.0_alpha7.ebuild:
+  Dropped ppc-macos keyword, see you in prefix
 
   01 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
   -files/libtheora-1.0_alpha4-enable-flags.patch,
